README: Down-to-earth example with MP3 listing.

--- a/README.org
+++ b/README.org
@@ -61,33 +61,34 @@ quite primitive:
   ;; => #P"~/cmd-test.txt"
 #+end_src
 
-A much more involved command processing raw string argument:
+A much more involved command processing raw string argument, say, for your MP3 player setup:
 #+begin_src lisp
-  (tpl-cmds:define-command/string (:list-things :lt) (path)
-    "Recursively list things in PATH, be it directory or file."
+  (tpl-cmds:define-command/string (:list-mp3 :lm) (path)
+    "Recursively list all MP3 files in PATH, be it directory or file."
     (labels ((ls (file)
-               (if (uiop:directory-pathname-p file)
-                   (progn
-                     (format t "~&Directory ~a..." file)
-                     (mapc #'ls (uiop:subdirectories file))
-                     (mapc #'ls (uiop:directory-files file)))
-                   (format t "~&File ~a..." file))))
+               (cond
+                 ((uiop:directory-pathname-p file)
+                  (format t "~&Directory ~a..." file)
+                  (mapc #'ls (uiop:subdirectories file))
+                  (mapc #'ls (uiop:directory-files file)))
+                 ((equalp "mp3" (pathname-type file))
+                  (format t "~&File ~a..." file)))))
       (ls (uiop:merge-pathnames* (uiop:parse-native-namestring path) (uiop:getcwd)))))
 
   ;; Used like:
-  :list-things /path/to/trivial-toplevel-commands/
+  :list-mp3 /path/to/your/mp3/files
   ;; or
-  :lt /path/to/trivial-toplevel-commands/
+  :lm /path/to/your/mp3/files
 
-  ;; Directory /home/aartaka/git/trivial-toplevel-commands/...
-  ;; Directory /home/aartaka/git/trivial-toplevel-commands/.git/...
-  ;; Directory /home/aartaka/git/trivial-toplevel-commands/.git/branches/...
-  ;; Directory /home/aartaka/git/trivial-toplevel-commands/.git/hooks/...
-  ;; File /home/aartaka/git/trivial-toplevel-commands/.git/hooks/applypatch-msg.sample...
-  ;; File /home/aartaka/git/trivial-toplevel-commands/.git/hooks/commit-msg.sample...
-  ;; File /home/aartaka/git/trivial-toplevel-commands/.git/hooks/fsmonitor-watchman.sample...
-  ;; File /home/aartaka/git/trivial-toplevel-commands/.git/hooks/post-update.sample...
-  ;; ...
+  ;; Directory ...
+  ;; Directory ...
+  ;; File ...
+  ;; Directory ...
+  ;; Directory ...
+  ;; File ...
+  ;; File ...
+  ;; File ...
+  ;; File ...
 #+end_src
 
 You can also undefine previously defined commands with ~remove-command~:
